added background and bio

--- a/bio.html
+++ b/bio.html
@@ -2,7 +2,15 @@
 <html>
 <title>Biography</title>
 <link href="stylesheets/style-mon.css" rel="stylesheet" />
+
 <body>
-<a href="index.html">Return</a>
+	<a href="index.html">Home Page</a>
+	<a href="resume.html">Resume</a>
+	<p>I was raised in Belmont Massachusetts. When I started my studies at tufts university I was interested<br/>
+	in mechanical engineering as I enjoy working with my hands. This led me to join the Tufts Hybrid Racing team.<br/>
+	Soon I found computer science and found the work more enjoyable so I switched my major. This puts me in a<br/>
+	long line of family members working within the computer science world.</p>
+
 </body>
 </html>
+
