--- a/bio.html
+++ b/bio.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>Biography</title>
 <link href="stylesheets/style-mon.css" rel="stylesheet" />
-
+</head>
 <body>
 	<a href="index.html">Home Page</a>
 	<a href="resume.html">Resume</a>
