--- a/bio.html
+++ b/bio.html
@@ -3,6 +3,7 @@
 <head>
 <title>Biography</title>
 <link href="stylesheets/style-mon.css" rel="stylesheet" />
+<meta charset="UTF-8">
 </head>
 <body>
 	<a href="index.html">Home Page</a>
