--- a/bio.html
+++ b/bio.html
@@ -9,10 +9,9 @@
 <body>
 	<a href="index.html">Home Page</a>
 	<a href="resume.html">Resume</a>
-	<p>I was raised in Belmont Massachusetts. When I started my studies at tufts university I was interested<br/>
-	in mechanical engineering as I enjoy working with my hands. This led me to join the Tufts Hybrid Racing team.<br/>
-	Soon I found computer science and found the work more enjoyable so I switched my major. This puts me in a<br/>
-	long line of family members working within the computer science world.</p>
+	<p>I was raised in Belmont Massachusetts. When I started my studies at tufts university I declared<br/>
+    mechanical engineering. During my studies I found that the work I most enjoyed was that within the computer<br/>
+	science department. I soon switched into the computer science degree program.</p>
 
 </body>
 </html>
