put up better bio text

--- a/bio.html
+++ b/bio.html
@@ -2,16 +2,22 @@
 <html>
 <head>
 <title>Biography</title>
-<link href="stylesheets/style-mon.css" rel="stylesheet" media="only screen and (min-device-width:801px)" />
-<link href="stylesheets/style-phone.css" rel="stylesheet" media="only screen and (max-device-width:800px)" />
+<link media="only screen and (min-device-width:801px)" href="stylesheets/style-mon.css" rel="stylesheet" />
+<link media="only screen and (max-device-width:800px)" href="stylesheets/style-phone.css" rel="stylesheet" />
 <meta charset="UTF-8">
 </head>
 <body>
 	<a href="index.html">Home Page</a>
 	<a href="resume.html">Resume</a>
-	<p>I was raised in Belmont Massachusetts. When I started my studies at tufts university I declared<br/>
-    mechanical engineering. During my studies I found that the work I most enjoyed was that within the computer<br/>
-	science department. I soon switched into the computer science degree program.</p>
+	<div class="textbox"><p>	I am currently a student within the Tufts School of Engineering for Computer Science.
+	The language my studies have focused in is C++ but I am also currently learning html and css.
+	During my time at Tufts, I spent one summer studying in rural France. This trip intensified 
+	my desire to explore the world.  I have had the opportunity to visit Rome, London, Jerusalem, 
+	Talloires France and many of the United States national parks but I eagerly await the next 
+	opportunity for travel. </p>
+	<p>	When I am not working I am working on my Emergency Medical Technician certification, scuba
+	diving, rock climbing or hiking. My remaining time is dedicated to maintaining my fraternity's
+	financial stability as the house Treasurer. </P></div>
 
 </body>
 </html>
