changed link position

--- a/bio.html
+++ b/bio.html
@@ -7,8 +7,9 @@
 <meta charset="UTF-8">
 </head>
 <body>
-	<a href="index.html">Home Page</a>
-	<a href="resume.html">Resume</a>
+	<h1 class="name">Biography</h1>
+	<a class="link_bio" href="index.html">Home Page</a>
+	<a class="link_bio" href="resume.html">Resume</a>
 	<div class="textbox"><p>I am currently a student within the Tufts School of Engineering for Computer Science.
 	The language my studies have focused in is C++ but I am also currently learning html and css.
 	During my time at Tufts, I spent one summer studying in rural France. This trip intensified 
