updated format of links on bio page

--- a/bio.html
+++ b/bio.html
@@ -8,18 +8,18 @@
 </head>
 <body>
 	<h1 class="name">Biography</h1>
-	<a class="link_bio" href="index.html">Home Page</a>
-	<a class="link_bio" href="resume.html">Resume</a>
-	<div class="textbox"><p>I am currently a student within the Tufts School of Engineering for Computer Science.
+	
+	<p class="textbox">I am currently a student within the Tufts School of Engineering for Computer Science.
 	The language my studies have focused in is C++ but I am also currently learning html and css.
 	During my time at Tufts, I spent one summer studying in rural France. This trip intensified 
 	my desire to explore the world.  I have had the opportunity to visit Rome, London, Jerusalem, 
 	Talloires France and many of the United States national parks but I eagerly await the next 
 	opportunity for travel. </p>
-	<p>	When I am not working I am working on my Emergency Medical Technician certification, scuba
+	<p class="textbox">When I am not working I am working on my Emergency Medical Technician certification, scuba
 	diving, rock climbing or hiking. My remaining time is dedicated to maintaining my fraternity's
-	financial stability as the house Treasurer. </P></div>
-
+	financial stability as the house Treasurer. </p>
+	<a class="link_bio" href="index.html">Home Page</a>
+	<a class="link_bio" href="resume.html">Resume</a>
 </body>
 </html>
 
