--- a/bio.html
+++ b/bio.html
@@ -20,6 +20,7 @@
 	financial stability as the house Treasurer. </p>
 	<a class="link_bio" href="index.html">Home Page</a>
 	<a class="link_bio" href="resume.html">Resume</a>
+	<a class="link_bio" href="projects.html">Projects</a>
 </body>
 </html>
 
